--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -73,3 +73,23 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+  deploy:
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          script: |
+            echo "Starting deployment sequence on EC2..."
+            DEPLOY_DIR="/home/ec2-user/projects/blog-api"
+            cd $DEPLOY_DIR
+            docker-compose -f docker-compose-prod.yml pull
+            echo "Restarting Docker Compose services..."
+            docker-compose -f docker-compose-prod.yml up -d --remove-orphans
+            echo "Deployment finished successfully."
