--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,9 +1,11 @@
 version: "3"
 services:
   api:
-    image: odkoo/blog-api
+    image: odkoo/blog-api:latest
     ports:
       - 80:8000
+    env_file:
+      - ./.env
     environment:
       - DATABASE_HOSTNAME=${DATABASE_HOSTNAME}
       - DATABASE_PORT=${DATABASE_PORT}
@@ -22,8 +24,11 @@ services:
     environment:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_USER=${DATABASE_USERNAME}
+    ports:
+      - "5432:5432"
     volumes:
-      - postgres-db:/var/lib/postgresql/data
+      - postgres-db:/var/lib/postgresql
 
 volumes:
   postgres-db:
