--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.3.0
 exceptiongroup==1.3.0
+Faker==37.11.0
 fastapi==0.119.0
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.1
@@ -53,6 +54,7 @@ tomli==2.3.0
 typer==0.19.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.38.0
 uvloop==0.22.1
