--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -76,6 +76,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: [build]
+    environment:
+      name: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
